  on the routine (bug #40139)
- fixed problem with datetime formatting that causes an extra space to be included between the
  date and time when sent to the server (bug #41021)
- fixed sproc parameter parsing so that a space between the type and size spec would not cause a problem
  (bug #41034)
      
Version 5.2.5 - 11/14/2008
- fixed problem with package registration that kept the DDEX provider from working (bug #40726)

Version 5.2.4 - 11/11/2008  (Happy Birthday to me!)
- fixed web providers autogenerateschema option where it would fail if no schema is
  present at all (bug #39072)
- backported fix for lingering problem related to bug #37239.  If two columns had the same name but
  different case then an exception would be thrown.  
- fixed stored procedure parameter parsing when used inside server explorer.  (bug #39252)
- fixed time data type so that negative values are handled properly (bug #39275)
- added runtime check for the mono platform to our Membership provider.  The mono runtime
  as of 1.9.1 did not support the methods needed for hashed passwords (bug #38895)
- fixed problem where negative time values with a zero hour would return as postive
  values (bug #39294)  
- fixed problem where using a stored procedure with parameters with a table adapter
  was no longer working after our parameter schema changes (bug #39252)  
- fixed problem with profile provider where INSERT .. ON DUPLICATE UPDATE syntax would not
  work correctly with some older server versions (bug #39330)  
- Defaulting max allowed packet to 1024 to account for the possible case where the
  value doesn't come in as a server variable  
- fixed bug #39728 by making MySqlConnectionStringBuilder.GetConnectionString an internal method.
  It should not have been publicly available anyway.  It is used internally by the 
  MySqlConnection.ConnectionString property
- implemented Disposable pattern on MySqlTransaction class so including one in a using statement