@@ -10,7 +10,7 @@
       <providers>
         <clear/>
         <add name="MySqlProfileProvider" connectionStringName="LocalMySqlServer" 
-             applicationName="/" type="MySql.Web.Profile.MySQLProfileProvider, mysql.web, Version=5.2.4.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d"/>
+             applicationName="/" type="MySql.Web.Profile.MySQLProfileProvider, mysql.web, Version=5.2.6.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d"/>
       </providers>
       <properties>
         <add name="Name"/>
